# deploy

./: .editorconfig  .gitattributes  .gitignore  .tool-versions  BUILD.bazel  CHANGELOG.md  MODULE.bazel  README.md  WORKSPACE  ami_cleaup.sh  build.sh  deps.bzl  generate-changelog.py  go.mod  go.sum  lint.sh  override.L.yaml  override.XL.yaml  override.XS.yaml  packer.bzl  packer.sh  volume_cleanup.sh
.buildkite/: install-packer-env.sh  pipeline.yaml  pipeline.yml
.github/packer/: ci-aws-builder.pkr.hcl  ci-build-variables.hcl  release-L-aws-builder.pkr.hcl  release-M-aws-builder.pkr.hcl  release-S-aws-builder.pkr.hcl  release-XL-aws-builder.pkr.hcl  release-XS-aws-builder.pkr.hcl
.github/workflows/: AMI-release.yaml  linter.yml  packer.yaml
ami/: README.md  ami-builder.pkr.hcl  ami-variables.hcl  checks.sh  launch.sh
ami/packer/: README.md  ami-builder.pkr.hcl  ami-variables.hcl  sourcegraph.pkr.hcl
cmd/init/: main.go
cmd/install/: install.go  main.go
cmd/installer/: install.go  main.go  root.go
dev/: README.md  install.sh  local-path-provisioner.ConfigMap.yaml  override.M.yaml  override.S.yaml  override.XL.yaml  override.yaml  restart-k3s  upgrade-check.sh
doc/: debugging.md  development.md  manual-ami.md
install/: bootstrap.sh  install.sh  multi-version-upgrade.sh  override.L.yaml  override.M.yaml  override.S.yaml  override.XL.yaml  override.XS.yaml  override.burst.yaml  override.yaml  reboot.sh
launch/: README.md  install.sh  user-data.sh
packer/: build-variables.hcl  m-m6a.hcl  s-m6a.hcl  sourcegraph.pkr.hcl  xs-m5a.hcl  xs-m6a.hcl
(+54 files in other folders)
